# ChainFrame

./: .gitignore  dfx.json  index.html  package-lock.json  package.json  vite.config.ts
backend/: Cargo.toml  backend.did
backend/src/: lib.rs  uuid.rs
src/: App.css  App.tsx  types.d.ts
src/components/AbsoluteImage/: AbsoluteImage.styled.tsx  AbsoluteImage.tsx
src/components/FrameChain/: FrameChain.tsx
src/components/ImageCanvas/: ImageCanvas.tsx
src/components/TransformContainer/: TransformContainer.tsx
src/components/UI/: UI.styled.tsx  UI.tsx
src/components/UI/DrawerMenu/: DrawerMenu.styled.tsx  DrawerMenu.tsx
src/config/: zoomConfig.ts
src/context/internet-identity/: index.tsx  internet-identity.tsx
src/hooks/: useZoom.tsx
src/models/: IFrame.ts
src/pages/Frame/EditFrame/: EditFrame.styled.tsx  EditFrame.tsx
src/pages/Frame/FramePage/: FramePage.styled.tsx  FramePage.tsx
src/pages/Frame/FramePage/AddNewChainFrame/: AddNewChainFrame.tsx
src/pages/Frame/FramePage/EditFrame/: EditFrame.styled.tsx  EditFrame.tsx
src/pages/PlayGround/: PlayGround.styled.tsx  PlayGround.tsx
src/pages/PlayGround/TransformContainer/: TransformContainer.tsx
src/pages/PlayGround/TransformContainer/FrameChain/: FrameChain.styled.ts  FrameChain.tsx
src/pages/PlayGround/TransformContainer/FrameChain/AbsoluteImage/: AbsoluteImage.tsx
src/tests/: App.test.tsx  FramePage.generated.test.tsx  ImageCanvas.generated.test.tsx  PlayGround.generated.test.tsx  TransformContainer.generated.test.tsx
src/utils/: mockApi.ts
