[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.7"
serde_cbor = "0.11.2"
ic-cdk = "0.13.2"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2.14", features = ["js"] }
